<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ZZLogViewer</string>
    <string name="app_title_with_version_fmt">%1$s v%2$s</string>
    <string name="show_line_numbers">Show Line Numbers</string>
    <string name="hide_line_numbers">Hide Line Numbers</string>
    <string name="menu_description">Menu</string>
    <string name="no_file_selected">No log file selected</string>
    <string name="browse_file">Browse File</string>
    <string name="text_size_increase">Text Size +</string>
    <string name="text_size_decrease">Text Size -</string>
    <string name="search">Search</string>
    <string name="search_hint">Search in log…</string>
    <string name="search_previous">Previous</string>
    <string name="search_next">Next</string>
    <string name="search_close">Close search</string>
</resources>
