<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- File Operations -->
    <group android:id="@+id/group_file_operations">
        <item
            android:id="@+id/action_browse_file"
            android:title="@string/browse_file" />
        <item
            android:id="@+id/action_search"
            android:title="@string/search" />
    </group>

    <!-- View Options -->
    <group android:id="@+id/group_view_options">
        <item
            android:id="@+id/action_toggle_line_numbers"
            android:title="@string/show_line_numbers"
            android:checkable="true"
            android:checked="true" />
        <item
            android:id="@+id/action_text_size_increase"
            android:title="@string/text_size_increase" />
        <item
            android:id="@+id/action_text_size_decrease"
            android:title="@string/text_size_decrease" />
    </group>

</menu>
